# yowl-project/backend/app/Models/PushSubscription.php
@@ -1,0 +1,21 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class PushSubscription extends Model
+{
+    protected $fillable = [
+        'user_id',
+        'endpoint',
+        'endpoint_hash',
+        'public_key',
+        'auth_token',
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
